@@ -1,5 +1,15 @@
 # LIC: GPL
 
+Changes from version 3.14 to 3.15:
+
+- Still in BETA!
+
+- src/pppoe.c: Don't ignore SIGTERM and SIGINT.  Send PADT and exit
+  if one of those signals is received.
+
+- General: Switch from net-tools (ifconfig and friends) to iproute2 (ip ...)
+  on Linux.
+
 Changes from version 3.13 to 3.14:
 
 - Release 3.14 (2020-05-26)
